	Added Controller.getAllInspectors() and implementations in Console and SimpleController
	ChartingPropertyInspectors now dispose their frames at the end of a simulation like
		other Inspectors.  If this proves irritating, just delete the
		ChartingPropertyInspector.disposeFrame() method and let us know and we may
		consider reversion.
	Removed nonsensical type check in SpatialNetwork2D.setAuxiliaryField(...)
	Added SparseField3D
	Added SparseGrid3D.getDimensions() and made SparseGrid3D a SparseField3D
	Added Continuous3D.getDimensions() and Continuous3D.getObjectLocationAsDouble3D(),
		and made Continuous3D a SparseField3D
	Major modifications to SpatialNetwork3D to work properly with SparseField3D instead
		of just with Continuous3D and SparseGrid3D.  SpatialNetwork3D also now
		works with SparseField2D as well.
	SpatialNetwork and SpatialNetwork3D instance variables now private
	FieldPortrayal3D.getDefaultTransform() made protected
	FieldPortrayal3D.defaultPortrayal is now private.  Subclasses wishing to modify this
		variable should instead override FieldPortrayal3D.getDefaultPortrayal()
	ValuePortrayal3D.Filter now has a toString() method which works just like
		ValuePortrayal2D.Portrayal
	Made QuadPortrayal.zScale and QuadPortrayal.colorDispenser private and created
		getters and setters for them.  Likewise for ValuePortrayal3D.map.
	Added ValueGrid2DPortrayal3D.[get|set]ValueName(...).  Made
		ValueGrid2DPortrayal3D.valueName private.  This required a small modification
		to HeatBugs.
	Added ValueGridPortrayal3D.[get|set]Map(...). Made ValueGridPortrayal3D.map private.
	Made both ValueGridPortrayal2D.valueName and ValueGridPortrayal3D.valueName private.
	Fixed bug in SparseGridPortrayal2D: selection information was not being passed on to
		simple portrayals.  Thanks to Martin Erdelen <martin.erdelen@kolombus.fi>
	Appropriate wrapper Simple Portrayals now pass mouse event information on to their
		children.